css/resonite-website-a2201f.webflow.css
/* ... */
.w-layout-vflex {
  flex-direction: column;
  align-items: flex-start;
  display: flex;
}

.w-layout-blockcontainer {
  max-width: 940px;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.w-embed-youtubevideo {
  background-image: url('https://d3e54v103j8qbb.cloudfront.net/static/youtube-placeholder.2b05e7d68d.svg');
  background-position: 50%;
  background-size: cover;
  width: 100%;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  position: relative;
}

.w-embed-youtubevideo:empty {
  min-height: 75px;
  padding-bottom: 56.25%;
}

@media screen and (max-width: 991px) {
  .w-layout-blockcontainer {
    max-width: 728px;
  }
}

@media screen and (max-width: 767px) {
  .w-layout-blockcontainer {
    max-width: none;
  }
}

body {
  color: #333;
  font-family: Poppins, sans-serif;
  font-size: 16px;
  line-height: 20px;
}

h1 {
  margin-top: 0;
  margin-bottom: 10px;
  font-size: 64px;
  font-weight: 600;
  line-height: 96px;
}

h2 {
  margin-top: 0;
  margin-bottom: 10px;
  font-size: 39px;
  font-weight: 500;
  line-height: 58.5px;
}

h3 {
  margin-top: 0;
  margin-bottom: 10px;
  font-size: 24px;
  font-weight: 500;
  line-height: 36px;
}

p {
  margin-bottom: 10px;
  font-size: 15px;
  font-weight: 400;
  line-height: 22.5px;
}

a {
  color: var(--primary-brand-color);
  text-decoration: underline;
}

.section-padding {
  padding-left: 20px;
  padding-right: 20px;
  font-size: 25.8px;
}

.container {
  flex: 1;
  max-width: 2000px;
  margin-left: auto;
  margin-right: auto;
}

.style-guide-grid {
  grid-column-gap: 40px;
  grid-row-gap: 41px;
  grid-template-rows: auto;
  grid-template-columns: 1fr 2fr;
  grid-auto-columns: 1fr;
  margin-top: 30px;
  margin-bottom: 30px;
  display: grid;
}

.style-guide-category {
  text-transform: uppercase;
  border-bottom: 1px solid #e6e6e6;
  margin-top: 20px;
  padding-bottom: 5px;
  font-weight: 700;
}

.style-guide-edit {
  text-transform: uppercase;
  border-bottom: 1px solid #e6e6e6;
  margin-top: 10px;
  margin-bottom: 10px;
}

.light-text {
  color: var(--light-color);
}

.style-guide-element {
  color: #fff;
  background-color: #3b83f7;
  margin-top: 3px;
  margin-bottom: 3px;
  padding: 3px 5px;
  font-size: 14px;
  font-weight: 300;
  display: inline-block;
}

.style-guide-class {
  color: #fff;
  background-color: #3b83f7;
  border-radius: 3px;
  padding: 3px 8px;
  font-size: 14px;
  font-weight: 300;
  display: inline-block;
}

.style-guide-class.tag-class {
  background-color: #cc55b8;
}

.style-guide-edit-wrap {
  opacity: .4;
}

.style-guide-edit-wrap:hover {
  opacity: 1;
}

.small-p {
  font-size: 15px;
  line-height: 22.5px;
}

.large-p {
  font-size: 24px;
  font-weight: 500;
  line-height: 36px;
}

.style-guide-color-wrap {
  background-color: var(--dark-color);
  justify-content: flex-start;
  align-items: center;
  height: 100px;
  margin-top: 30px;
  padding: 15px 30px;
  display: flex;
}

.style-guide-color-wrap.primary-color-background {
  background-color: var(--primary-brand-color);
}

.style-guide-color-wrap.secondary-color-background {
  background-color: var(--secondary-brand-color);
}

.style-guide-color-wrap.mid-grey-color-background {
  background-color: var(--mid-grey);
}

.style-guide-color-wrap.light-color-background, .style-guide-color-wrap.white-background {
  background-color: var(--light-color);
}

.style-guide-color-wrap.light-grey-color-background {
  background-color: var(--light-grey);
}

.button {
  background-color: var(--mid-grey);
  border-radius: 15.46px;
  margin-top: 0;
  font-size: 24px;
  line-height: 36px;
}

.button.ghost-button {
  border: 2px solid var(--primary-brand-color);
  color: var(--primary-brand-color);
  background-color: rgba(0, 0, 0, 0);
}

.button.ghost-button.invese-ghost {
  border-color: var(--light-color);
  color: var(--light-color);
}

.button.inverse-button {
  background-color: var(--light-color);
  color: var(--dark-color);
}

.button.form-submit {
  margin-top: 15px;
}

.style-guide-grid-item-wrap {
  grid-column-gap: 20px;
  grid-row-gap: 0px;
  flex-direction: column;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  align-items: flex-start;
  justify-items: stretch;
  padding-top: 10px;
  display: grid;
}

.list {
  padding-left: 15px;
}

.list-item {
  margin-top: 10px;
  margin-bottom: 10px;
}

.form-field.form-select {
  background-color: var(--light-color);
}

.form-lable {
  margin-top: 20px;
}

.form-checkbox {
  width: 20px;
}

.style-guide-layout-demo {
  background-color: #d3d3d3;
  border: 1px solid #d3d3d3;
}

.style-guide-layout-demo.section-padding {
  margin-top: 30px;
}

.style-guide-white-div {
  background-color: #fff;
  width: 100%;
  height: 100%;
  padding: 20px;
}

.popup-background-wrap {
  z-index: 100;
  background-color: rgba(0, 0, 0, .8);
  justify-content: center;
  align-items: center;
  display: none;
  position: fixed;
  top: 0%;
  bottom: 0%;
  left: 0%;
  right: 0%;
}

.popup-card {
  background-color: var(--light-color);
  text-align: center;
  border-radius: 5px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 450px;
  padding: 30px;
  display: flex;
  position: relative;
}

.style-guide-wrap {
  padding-top: 20px;
}

.close-popup-button {
  color: var(--dark-color);
  padding: 15px;
  font-size: 20px;
  text-decoration: none;
  position: absolute;
  top: -5px;
  bottom: auto;
  left: auto;
  right: -5px;
}

.style-guide-popup-wrap {
  background-color: var(--dark-color);
  justify-content: center;
  align-items: center;
  margin-top: 10px;
  margin-bottom: 30px;
  padding: 22px;
  display: flex;
}

.d1 {
  color: #e1e1e0;
  margin-right: 3px;
  padding-right: 0;
  font-family: Poppins, sans-serif;
  font-size: 15px;
  font-weight: 400;
  line-height: 22.5px;
}

.body {
  background-color: #11151d;
  margin-right: 3px;
}
/* ... */

